Clean up a bunch of warnings